--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section>
         <h2>
             Latest Posts
-            <a class="section-button" href="/posts">View all</a>
+            <a class="section-button" href="/blog/posts">View all</a>
         </h2>
         <div class="posts">
             
