--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Richard's Blog
 <section>
 <h2>
 Latest Posts
-<a class=section-button href=https://richardcsuwandi.github.io/blog/blog/posts>View all</a>
+<a class=section-button href=https://richardcsuwandi.github.io/blog/posts>View all</a>
 </h2>
 <div class=posts>
 <div class=post>
