Added new blog posts

--- a/index.html
+++ b/index.html
@@ -70,10 +70,18 @@ Latest Posts
 </a>
 </div>
 <div class=post>
+<a href=https://richardcsuwandi.github.io/blog/posts/linkedin-analysis/>
+<div class=post-row>
+<time>2021-02-24</time>
+<h3>Analyzing My Own LinkedIn Data</h3>
+</div>
+</a>
+</div>
+<div class=post>
 <a href=https://richardcsuwandi.github.io/blog/posts/moravec/>
 <div class=post-row>
 <time>2020-08-30</time>
-<h3>Why is AI So Smart and Yet So Dumb?</h3>
+<h3>Why Is AI So Smart and Yet So Dumb?</h3>
 </div>
 </a>
 </div>
@@ -82,6 +90,14 @@ Latest Posts
 <div class=post-row>
 <time>2020-08-05</time>
 <h3>Data is the New Lego</h3>
+</div>
+</a>
+</div>
+<div class=post>
+<a href=https://richardcsuwandi.github.io/blog/posts/chinese-calligraphy/>
+<div class=post-row>
+<time>2020-07-31</time>
+<h3>I Taught My Computer to Classify Chinese Calligraphy Styles</h3>
 </div>
 </a>
 </div>
